--- a/portfolio/templates/portfolio/target_allocations.html
+++ b/portfolio/templates/portfolio/target_allocations.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div class="row">
     <!-- Sidebar Column -->
-    <div class="col-md-2 d-none d-md-block px-0">
+    <div id="sidebar-column" class="col-md-2 d-none d-md-block px-0">
         {% include "portfolio/sidebar.html" %}
     </div>
 
-    <div class="col-md-10">
+    <div id="main-content-column" class="col-md-10">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div>
                 <h1 class="h2 mb-0">Target Allocations</h1>
