--- a/portfolio/templates/portfolio/holdings.html
+++ b/portfolio/templates/portfolio/holdings.html
@@ -7,12 +7,12 @@
 <div class="dashboard-content">
 <div class="row">
     <!-- Sidebar Column -->
-    <div class="col-md-2 d-none d-md-block px-0">
+    <div id="sidebar-column" class="col-md-2 d-none d-md-block px-0">
         {% include "portfolio/sidebar.html" %}
     </div>
 
     <!-- Main Content Column -->
-    <div class="col-md-10">
+    <div id="main-content-column" class="col-md-10">
         <div class="row">
             <div class="col-md-12">
                 <h1>{% if account %}Holdings for {{ account.name }}{% else %}Holdings{% endif %}</h1>
