--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -31,12 +31,12 @@
 <div class="dashboard-content" style="--account-columns: {{ account_value_columns }};">
 <div class="row">
     <!-- Sidebar Column -->
-    <div class="col-md-2 d-none d-md-block px-0">
+    <div id="sidebar-column" class="col-md-2 d-none d-md-block px-0">
         {% include "portfolio/sidebar.html" %}
     </div>
 
     <!-- Main Content Column -->
-    <div class="col-md-10">
+    <div id="main-content-column" class="col-md-10">
         <div class="row">
             <div class="col-md-12">
                 <div class="d-flex justify-content-between align-items-center mb-4">
