--- a/portfolio/templates/portfolio/includes/allocation_table_simple.html
+++ b/portfolio/templates/portfolio/includes/allocation_table_simple.html
@@ -14,11 +14,11 @@
                 {% for at in account_types %}
                     <th scope="col" class="text-center small text-muted">Current</th>
                     <th scope="col" class="text-center small text-muted">Target</th>
-                    <th scope="col" class="text-center small text-muted">vTarget</th>
+                    <th scope="col" class="text-center small text-muted">Drift</th>
                 {% endfor %}
                 <th scope="col" class="text-center small table-active text-muted">Current</th>
                 <th scope="col" class="text-center small table-active text-muted">Target</th>
-                <th scope="col" class="text-center small table-active text-muted">vTarget</th>
+                <th scope="col" class="text-center small table-active text-muted">Drift</th>
             </tr>
         </thead>
         <tbody>
